# AgentFabric

./: .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
agentfabric/: __init__.py  cli.py  errors.py  platform.py
agentfabric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentfabric/cli/: __init__.py  main.py
agentfabric/observability/: __init__.py  logging_config.py  metrics.py
agentfabric/phase1/: __init__.py  manifest.py  memory.py  observability.py  protocol.py  runtime.py  sandbox.py  sdk.py  security.py  tools.py
agentfabric/phase2/: __init__.py  auth.py  billing.py  models.py  pipeline.py  registry.py  reviews.py
agentfabric/phase3/: __init__.py  collaboration.py  protocol.py  workflow.py
agentfabric/phase4/: __init__.py  audit.py  marketplace.py  rbac.py  sla.py
agentfabric/production/: __init__.py  api.py  authn.py  compliance.py  control_plane.py  db.py  marketplace.py  ops.py  security_pipeline.py  store.py
agentfabric/runtime/: __init__.py  audit.py  manifest.py  secrets.py  verification.py
agentfabric/runtime/memory/: __init__.py  memory.py
agentfabric/runtime/orchestrator/: __init__.py  orchestrator.py
agentfabric/runtime/routing/: __init__.py  tool_router.py
agentfabric/runtime/sandbox/: __init__.py  sandbox.py
agentfabric/sdk/: __init__.py  agent.py
agentfabric/server/: __init__.py  app.py  auth.py  config.py  database.py  forge_ui.py  models.py  payments.py  queue.py  schemas.py  services.py  signing.py  worker.py
agents/manifest_schema/: README.md  manifest.v1.schema.json
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_add_reviews_and_principal_role.py  0002_queue_payment_hardening.py  0003_add_agent_projects.py  0003_merge_heads.py
cli/: README.md
deploy/k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secret.example.yaml  worker-deployment.yaml
docs/: README.md  agent-protocol-layer.md  architecture.md  cli-reference.md  manifest-reference.md  sdk-guide.md  security-model.md
examples/: echo_manifest.json
runtime/: README.md
sdk/python/: README.md
tests/: __init__.py  test_alembic_migration.py  test_integration.py  test_manifest.py  test_orchestrator.py  test_phase1_runtime.py  test_phase2_marketplace.py  test_phase3_collaboration.py  test_phase4_enterprise.py  test_production_stack.py  test_sandbox.py  test_security.py  test_server_api_stack.py  test_server_postgres_redis_integration.py  test_server_queue_worker.py  test_tool_router.py
