[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfabric"
version = "0.2.0"
description = "AgentFabric production scaffolding for phases 1-4"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AgentFabric Team" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.41.0",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.0",
    "psycopg[binary]>=3.3.0",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "pyjwt>=2.7.0",
    "stripe>=14.4.0",
    "httpx>=0.28.0",
]

[tool.setuptools]
packages = ["agentfabric", "agentfabric.phase1", "agentfabric.phase2", "agentfabric.phase3", "agentfabric.phase4", "agentfabric.production", "agentfabric.server"]
