[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfabric"
version = "0.2.0"
description = "AgentFabric production scaffolding for phases 1-4"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AgentFabric Team" }]
license = { text = "MIT" }
dependencies = [
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "fastapi>=0.100,<0.129",
    "uvicorn>=0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.10",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "redis>=4.0",
    "pyjwt>=2.7.0",
    "stripe>=5.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
agentfabric = "agentfabric.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentfabric*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
